fixed bug where scrollbar appeared when no icon was present

--- a/sites/all/themes/newplay/css/newplay.css
+++ b/sites/all/themes/newplay/css/newplay.css
@@ -771,6 +771,7 @@
     .js #panel-default-overlay .views-field-title {
       font-size: 18px;
       font-weight: bold;
+      overflow: hidden;
     }
     
     /* position avatar */
